--- a/catalog.html
+++ b/catalog.html
@@ -33,8 +33,8 @@
 
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
-  <!--  <link rel="stylesheet" href="css/animate.min.css"> -->
-  <!--   <link rel="stylesheet" href="css/swiper-bundle.min.css"> -->
+   <link rel="stylesheet" href="css/animate.min.css">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/jquery.dmenu.css">
 
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -47,17 +47,18 @@
 
   <script src="js/jquery.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
-  <!--   <script src="js/wow.min.js"></script> -->
-  <!--   <script src="js/maskedinput.min.js"></script> -->
-  <!--   <script src="js/swiper-bundle.min.js"></script> -->
+    <script src="js/wow.min.js"></script>
+    <script src="js/maskedinput.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
   <!--   <script src="js/hover-slider.min.js"></script> -->
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.dmenu.js"></script>
+  <script src="js/fixedcart.js"></script>
 
   <!--   <script src="js/selectbox.js"></script> -->
   <!--   <script src="js/jquery-ui.js"></script> -->
   <!--   <script src="js/filter.js"></script> -->
-  <!--   <script src="js/jquery.zoom.min.js"></script> -->
+    <script src="js/jquery.zoom.min.js"></script>
   <!--   <script src="js/lightbox.min.js"></script> -->
   <!--   <script src="js/jquery.lazy.min.js"></script>
   <script src="js/jquery.lazy.youtube.min.js"></script> -->
