--- a/product_off.html
+++ b/product_off.html
@@ -33,7 +33,7 @@
 
   <link rel="stylesheet" href="css/bootstrap.min.css">
   <!--  <link rel="stylesheet" href="css/animate.min.css"> -->
-  <!--   <link rel="stylesheet" href="css/swiper-bundle.min.css"> -->
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
   <link rel="stylesheet" href="css/jquery.dmenu.css">
 
   <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -48,15 +48,16 @@
   <script src="js/bootstrap.min.js"></script>
   <!--   <script src="js/wow.min.js"></script> -->
   <!--   <script src="js/maskedinput.min.js"></script> -->
-  <!--   <script src="js/swiper-bundle.min.js"></script> -->
+    <script src="js/swiper-bundle.min.js"></script>
   <!--   <script src="js/hover-slider.min.js"></script> -->
   <script src="js/slick.min.js"></script>
   <script src="js/jquery.dmenu.js"></script>
+  <script src="js/fixedcart.js"></script>
 
   <!--   <script src="js/selectbox.js"></script> -->
   <!--   <script src="js/jquery-ui.js"></script> -->
   <!--   <script src="js/filter.js"></script> -->
-  <!--   <script src="js/jquery.zoom.min.js"></script> -->
+    <script src="js/jquery.zoom.min.js"></script>
   <!--   <script src="js/lightbox.min.js"></script> -->
   <!--   <script src="js/jquery.lazy.min.js"></script>
   <script src="js/jquery.lazy.youtube.min.js"></script> -->
@@ -740,10 +741,10 @@
                       <img src="img/detailpreview1.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product2.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
-                      <img src="img/product3.jpg" />
+                      <img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" />
                     </div>
                     <div class="swiper-slide">
                       <img src="img/detailpreview1.png" />
@@ -765,10 +766,10 @@
                       <div class="zoom-box"><img src="img/product1.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product2.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
-                      <div class="zoom-box"><img src="img/product3.jpg" /></div>
+                      <div class="zoom-box"><img src="img/bd8b8d6669b7b1308b939a32f2af4f27.png" /></div>
                     </div>
                     <div class="swiper-slide">
                       <div class="zoom-box"><img src="img/product1.png" /></div>
